# modorganizer-linux

./: .pylintrc  ModOrganizer.ini  main.py  org.bhoehn.modorganizer.json  org.bhoehn.modorganizer.metainfo.xml  pyproject.toml  pyrightconfig.json
.github/workflows/: flatpak-builder.yml  main.yml
flatpak/: org.bhoehn.modorganizer.desktop  org.bhoehn.modorganizer.json
org.bhoehn.modorganizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: __init__.py  config.py  main.py  mobase.py  test.json
src/core/: instance.py  main_window.py  profile.py
src/modorganizer_linux.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/plugins/: __init__.py
src/plugins/games/: game_manager.py
src/plugins/games/falloutnv/: falloutnv.py
src/plugins/utils/: basic_game.py
src/plugins/utils/basic_features/: basic_local_savegames.py  basic_mod_data_checker.py  basic_save_game_info.py
src/ui/: main_window.py
src/ui/dialogs/: instance_manager.py  instance_selector.py  instance_wizard.py  profile.py  settings.py
src/ui/qt/: aboutdialog_ui.py  categoriesdialog.ui  categoriesdialog_ui.py  categoryimportdialog_ui.py  createinstancedialog_ui.py  editexecutablesdialog_ui.py  forcedloaddialogwidget_ui.py  instancemanagerdialog.py  listdialog.ui  listdialog_ui.py  lootdialog_ui.py  mainwindow.py  mainwindow_ui.py  messagedialog_ui.py  modinfodialog.ui  modinfodialog_ui.py  motddialog_ui.py  nexusmanualkey_ui.py  problemsdialog_ui.py  profileinputdialog_ui.py  profilesdialog.py  profilesdialog_ui.py  resources_rc.py  savetextasdialog_ui.py  selectiondialog_ui.py  settingsdialog.ui  settingsdialog_ui.py  syncoverwritedialog_ui.py  updatedialog_ui.py  validationprogressdialog_ui.py
src/utils/: logging.py  nexus_sso.py  steam_utils.py
stubs/: __init__.pyi
stubs/PySide6/: QtCore.pyi  QtGui.pyi  QtWebEngineWidgets.pyi  QtWidgets.pyi  __init__.pyi
stubs/utils/: __init__.pyi  steam_utils.pyi
utils/: parse_config.py
